[metadata]
name = MesoSim
author = Jonathan Thielen
author_email = jon@thielen.science
license = Apache-2.0
description = Utilities for meteorological case study simulation
long_description = file: README.md
keywords = meteorology, science, simulation
url = https://github.com/MesoSim/mesosim-common
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Games/Entertainment :: Simulation
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = True
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    setuptools
    pandas>=1.0.1
    pyproj>=1.9.6
setup_requires = setuptools; setuptools_scm

[options.packages.find]
where = src

[options.extras_require]
test = pytest; pytest-cov

[options.package_data]
mesosim = us_cities.csv

[flake8]
max-line-length = 95
ignore=
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    build


[isort]
default_section=THIRDPARTY
known_first_party=mesosim
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=95

[doc8]
file-encoding = utf8
max-line-length = 95

[pydocstyle]
match = (?!(test_|setup)).*\.py
match-dir = (?!(build|docs))[^.].*
convention = numpy